# End-to-End-Fraud-detection-system

./: .gitignore  LICENSE  README.md  docker-compose.yml  dockerfile.api  dockerfile.streamlit  dvc.yaml  mlflow.db  prometheus.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
app/: streamlitapp.py
app/api/: main.py
artifacts/: featurizer-1.joblib  featurizer.joblib  fraud_preprocess_artifacts.joblib  fraud_xgb_model.joblib  train_meta.joblib  train_meta_1.joblib
dataset/: .gitignore  merged_data_pruned.parquet.dvc
notebook/: frauddetection(1).ipynb
reports/: .gitignore
src/fraud/data/: load_data.py
src/fraud/features/: featurizer.py  preprocessing.py
src/fraud/inference/: predictor.py
src/fraud/training/: run_train.py  run_val.py  train.py  validate.py
src/fraud/utils/: io.py
src/fraud_mlops.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_api.py  test_training_smoke.py
